--- a/main.html
+++ b/main.html
@@ -4,12 +4,38 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+
+<style>
+	body{
+		margin : 0;
+		height:100vh;
+		display:flex;
+		justify-content:center;
+		align-items:center;
+	}
+	.center-box{
+		height: 200px;
+		width: 200px;
+		background-color:lightblue;
+		border: 2px solid black;
+		
+		display:flex;
+		justify-content:center;
+		align-items:center;
+		color:purple;
+		font-size : 20px;
+	} 
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+
+	<div class="center-box">
+		this is center
+	</div>
 
 </body>
 
