--- a/main.html
+++ b/main.html
@@ -6,25 +6,25 @@
 	<link rel="stylesheet" href="styles.css">
 
 <style>
-	body{
-		margin : 0;
-		height:100vh;
-		display:flex;
-		justify-content:center;
-		align-items:center;
-	}
-	.center-box{
-		height: 200px;
-		width: 200px;
-		background-color:lightblue;
-		border: 2px solid black;
-		
-		display:flex;
-		justify-content:center;
-		align-items:center;
-		color:purple;
-		font-size : 20px;
-	} 
+	body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center-box {
+    height: 200px;
+    width: 200px;
+    background-color: lightblue;
+    border: 2px solid black;
+    display: flex; /* Center text inside the box */
+    justify-content: center; /* Horizontally center */
+    align-items: center; /* Vertically center */
+    color: purple; /* Text color */
+    font-size: 20px; /* Font size */
+}
 	</style>
 </head>
 
